--- a/Reflections/readme-Reflections.html
+++ b/Reflections/readme-Reflections.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<title>SubtleMods: Reflections</title>
+<title>SubtleMods: Reflections of Destiny</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="style/g3readme_cam.css" type="text/css" />
 <link href="style/g3icon.ico" rel="icon" type="image/bmp" />
 </head>
 <body>
-<h1>SubtleMods: Reflections, improving the last chapter of BG1</h1>
+<h1>SubtleMods: Reflections of Destiny, an SoD Remix Mod</h1>
 <div class="section">
-  <p><strong> Version 0.2 </strong><br />
+  <p><strong> Version 0.3 </strong><br />
   <strong> Languages:</strong> English</p>
   <p><strong>Author: <a href="http://forums.gibberlings3.net/index.php?showuser=6306">The Subtle Doctor</a></strong></p>
   <p><strong><a href="https://github.com/subtledoctor/Reflections">Home page</a></strong></p>
@@ -18,7 +18,9 @@
 </div>
 <h2>Overview</h2>
 <div class="section">
-  <p>This mod is designed to improve the last chapter of the BG1 campaign, starting with Sarevok's coronation scene. In the base game you get teleported to the final encounter, and that's it - game over. Here, I aim to add some breathing room, giving you time to finish up any outstanding quests. And I add more interactions with various important end-game NPCs, to flesh out more nuanced relationships. <i>And</i> I bring Korlasz' dungeon forward from Siege of Dragonspear into BG1, <i>before</i> you fight Sarevok. <i><b>And</b></i>, finally, I add a really cool new magic item that lets you cast Simulacrum on anyone! Even Sarevok or Belhifet!</p>
+  <p>This mod is designed to modify, improve, and sometimes move around various parts of the Siege of Dragonspear campaign - and the bits of BG1 just before it and bits of BG2 just after it. The first two components focus on the last chapter of the BG1 campaign, starting with Sarevok's coronation scene. In the base game you get teleported to the final encounter, and that's it - game over. Here, I add more interactions with various end-game NPCs, flesh out more nuanced relationships, and you time to finish up any outstanding quests. The narrative center of gravity for this section of the game becomes Korlasz' dungeon, brought forward from Siege of Dragonspear into BG1, <i>before</i> you fight Sarevok.</p> 
+  <p>Supporting that, mostly for giggles and a teeny-tiny hint of foreshadowing, the first component adds a cool new magic item to both BG1 and BG2, which lets you cast Simulacrum on anyone! Even Sarevok or Belhifet!</p>
+  <p>With those two seeds sown, future components will more directly alter parts of SoD itself. At least, that is the current plan.</p>
 </div>
 <h2>Installation</h2>
 <div class="section">
@@ -26,7 +28,7 @@
     The mod archive should be extracted into your game folder from the archive (or just unzipped and then copied there). If properly extracted, you should have a "Reflections" folder and "setup-Reflections.exe" in your game folder. To install, simply double-click "setup-Reflections.exe" and follow the instructions on screen.</p>
   <p>Run setup-might_and_guile.exe in your game folder to reinstall, uninstall or otherwise change components.</p>
   <p><strong>Mac OS X:</strong><br />
-    This mod is packaged and installed with WeiDU. To install, simply extract the contents of the mod into your game folder. If properly extracted, you should have a folder called "Reflections." I highly recommend using the Mac Weidu Launcher, which opens a menu of all mods in your game folder and lets you choose which one to install.</p>
+    This mod is packaged and installed with WeiDU. To install, simply extract the contents of the mod into your game folder. If properly extracted, you should have a folder called "Reflections." I highly recommend using the "Mac Weidu Launcher" utility, made by me (!), which opens a menu of all mods in your game folder and lets you choose which one to install.</p>
 </div>
 <h2>Compatibility</h2>
 <div class="section">
@@ -50,8 +52,8 @@
   </div>
   <h4 class="subheader">Component 200: </h4>
   <div class="section">
-    <p><strong><em>The Clone Saga</em></strong></p>
-      <p>This component is much more involved. First, it adds a plot to the end of the BG1 campaign that implicitly (only implicitly) involves the Mirror Shard from component 100 and Melicamp's Netherese bracers. You will get a bit more satisfaction out of this plot if you also install The Calling quest mod and the Brandock NPC mod.</p>
+    <p><strong><em>Back to the Future</em></strong></p>
+      <p>This component is much more involved. First, it adds a plot to the end of the BG1 campaign that implicitly involves the Mirror Shard from component 100 and Melicamp's Netherese bracers. Installing component 100 is not required, but if you do you might have an inkling that other entities are making use of the Mirror Shard. You will get a bit more satisfaction out of this plot if you also install "The Calling" quest mod and the "Brandock" NPC mod.</p>
       <p>Next, you are given a lot more breathing room in the last chapter of BG1. Instead of teleporting you to the Undercity Maze after you interrupt Sarevok's coronation, now the Grand Dukes will ask you to investigate where he may have gone. While you search for Sarevok, you can finish up other quests. This should work well with the excellent Black Hearts mod, which also gives you things to do in the last chapter of BG1.</p>
       <p>Next, this mod brings Korlasz' Crypt forward from the Siege of Dragonspear campaign into the BG1 campaign. Instead of being a "Sarevok clean-up quest" as Beamdog set it up, this great dungeon now becomes an integral part of your search for Sarevok.</p>
       <p>Next, once you find Sarevok and fight him, the BG1 campaign will no longer abruptly end. Instead you will report your success to the Grand Dukes - and they may not be as happy about your actions as you might think! This is where the game will finally move on to the Siege of Dragonspear campaign.</p>
