--- a/Reflections/readme-Reflections.html
+++ b/Reflections/readme-Reflections.html
@@ -60,6 +60,12 @@
       <p>However, this also presents you with an option to <b>skip</b> Siege of Dragonspear, and stay in Baldur's Gate when the Coalition army marches north to meet Caelar Argent. This choice will proceed to the resolution of the Mirror Shard plot (again, only implicitly) and send you to the beginning of the Shadows of Amn campaign. The goal here is to make your capture by Irenicus and escape from his lair feel like it is still occurring in the BG1 campaign. It should add immediacy to the transition to BG2.</p>
       <p>Through all this, there are many more dialogues in the end of BG1 which flesh out what is happening in the city, how you are perceived, and your relationship to the city's rulers. You will have an explicit choice to disclose your heritage to them, or to keep it concealed. This doesn't have any mechanical consequences (yet!) but provides a better sense of agency and more in-depth player interactions in a part of the game that, in its initial release, is shockingly sparse.</p>
   </div>
+  <h4 class="subheader">Component 400: </h4>
+  <div class="section">
+    <p><strong><em>Nothing to Fear but Feyr Itself</em></strong></p>
+    <p>This very small component changes the encounter with Elandro at Bridgefort. It is meant to hint at the possibility that Elandro is... <i>special</i>, in a familiar way. But, like the Mirror Shard component above, the mod will give you no more than hints.</p>
+    <p>This component could make the Elandro encounter a bit more dangerous, depending on how you play things. So beware! Also it should give you a bit of a reward at the end, which you may find useful. This reward, again, is meant to hint at things to come. And is hopefully fun for players!</p>
+  </div>
 </div>
 <h2>Contact Information</h2>
 <div class="section">
